WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202627
[iOS] Unmuting capture of a page is not working
https://bugs.webkit.org/show_bug.cgi?id=202627
Summary
[iOS] Unmuting capture of a page is not working
youenn fablet
Reported
2019-10-07 02:59:28 PDT
[iOS] Unmuting capture of a page is not working
Attachments
Patch
(16.36 KB, patch)
2019-10-07 03:09 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(16.35 KB, patch)
2019-10-07 05:50 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(16.42 KB, patch)
2019-10-07 06:49 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-10-07 03:09:35 PDT
Created
attachment 380311
[details]
Patch
youenn fablet
Comment 2
2019-10-07 03:20:15 PDT
<
rdar://problem/55970691
>
youenn fablet
Comment 3
2019-10-07 05:50:43 PDT
Created
attachment 380317
[details]
Patch
Eric Carlson
Comment 4
2019-10-07 06:07:47 PDT
Comment on
attachment 380317
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380317&action=review
> Source/WebCore/ChangeLog:8 > + Before the patch, we were muting the captur tracks but never unmuting them.
s/captur/capture/
> Source/WebCore/Modules/mediastream/MediaStreamTrack.cpp:479 > +void MediaStreamTrack::updateCaptureAccordingMutedState(Document& document)
Nit: updateCaptureAccordingToMutedState would be slightly clearer.
youenn fablet
Comment 5
2019-10-07 06:49:10 PDT
Created
attachment 380322
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-10-07 07:36:24 PDT
Comment on
attachment 380322
[details]
Patch for landing Clearing flags on attachment: 380322 Committed
r250774
: <
https://trac.webkit.org/changeset/250774
>
WebKit Commit Bot
Comment 7
2019-10-07 07:36:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug