[iOS] Unmuting capture of a page is not working https://bugs.webkit.org/show_bug.cgi?id=202627

Reviewed by Eric Carlson.

Source/WebCore:

Before the patch, we were muting the capture tracks but never unmuting them.
The patch updates the code to make sure we unmute capture tracks based on the document state.
In addition, the iOS code wass process-wide while capture might happen between two documents in the same process.
The patch updates the capturestate computation and muting logic to be Document based.
A follow-up refactoring will merge back iOS and MacOS code paths.
Covered by API test.

* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::captureState):
(WebCore::MediaStreamTrack::updateCaptureAccordingMutedState):
(WebCore::MediaStreamTrack::muteCapture): Deleted.
* Modules/mediastream/MediaStreamTrack.h:
* dom/Document.cpp:
(WebCore::Document::updateIsPlayingMedia):
(WebCore::Document::pageMutedStateDidChange):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/GetUserMedia.mm: Added.
(-[GetUserMediaCaptureUIDelegate _webView:requestMediaCaptureAuthorization:decisionHandler:]):
(-[GetUserMediaCaptureUIDelegate _webView:checkUserMediaPermissionForURL:mainFrameURL:frameIdentifier:decisionHandler:]):
(-[GetUserMediaTestView haveStream:]):
(TestWebKitAPI::waitUntilCaptureState):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/getUserMedia.html:


Canonical link: https://commits.webkit.org/216103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250774 268f45cc-cd09-0410-ab3c-d52691b4dbfc